message StartGameReq {
	string jwt;		
}

message StartGameResp {
	string game_id;
}
